--- a/config/pear.config.yml
+++ b/config/pear.config.yml
@@ -40,11 +40,11 @@ tab:
 ## 主题配置
 theme: 
   ## 默认主题色，对应 colors 配置中的 ID 标识
-  defaultColor: "2"
+  defaultColor: "5"
   ## 默认的菜单主题 dark-theme 黑 / light-theme 白
   defaultMenu: "dark-theme"
   ## 默认的顶部主题 dark-theme 黑 / light-theme 白
-  defaultHeader: "light-theme"
+  defaultHeader: "dark-theme"
   ## 是否允许用户切换主题，false 时关闭自定义主题面板
   allowCustom: true
   ## 通栏配置
